testdata/baselines/reference/compiler/tluaNoLabeledStatement.errors.txt
tluaNoLabeledStatement.tlua(5,1): error TS1435: Unknown keyword or identifier. Did you mean 'out'?
tluaNoLabeledStatement.tlua(5,1): error TS2304: Cannot find name 'outer'.
tluaNoLabeledStatement.tlua(5,6): error TS1128: Declaration or statement expected.
tluaNoLabeledStatement.tlua(11,15): error TS1005: ';' expected.
tluaNoLabeledStatement.tlua(11,15): error TS2304: Cannot find name 'outer'.
tluaNoLabeledStatement.tlua(18,18): error TS1005: ';' expected.
tluaNoLabeledStatement.tlua(18,18): error TS2304: Cannot find name 'outer'.
tluaNoLabeledStatement.tlua(23,7): error TS1359: Identifier expected. 'goto' is a reserved word that cannot be used here.
tluaNoLabeledStatement.tlua(23,12): error TS1003: Identifier expected.


==== tluaNoLabeledStatement.tlua (9 errors) ====
    // tlua has no labeled statement and no labeled jump: `::name::` and `goto` took
    // their place. Each of these is now a parse error.
    
    // `name:` no longer starts a labeled statement.
    outer: while true do
    ~~~~~
!!! error TS1435: Unknown keyword or identifier. Did you mean 'out'?
    ~~~~~
!!! error TS2304: Cannot find name 'outer'.
         ~
!!! error TS1128: Declaration or statement expected.
    end
    
    // break takes no label.
    function labeledBreak(n: number): void
        while n > 0 do
            break outer
                  ~~~~~
!!! error TS1005: ';' expected.
                  ~~~~~
!!! error TS2304: Cannot find name 'outer'.
        end
    end
    
    // continue takes no label.
    function labeledContinue(n: number): void
        while n > 0 do
            continue outer
                     ~~~~~
!!! error TS1005: ';' expected.
                     ~~~~~
!!! error TS2304: Cannot find name 'outer'.
        end
    end
    
    // `goto` is a reserved word, so it cannot be a binding name.
    local goto = 1;
          ~~~~
!!! error TS1359: Identifier expected. 'goto' is a reserved word that cannot be used here.
               ~
!!! error TS1003: Identifier expected.
    